--- a/assets/css/minu.css
+++ b/assets/css/minu.css
@@ -137,9 +137,10 @@ a:hover {
 	float: right;
 }
 .imgbox{
-	width: 240px;
-	height: 220px;
+	width: 198px;
+	height: 193px;
 	overflow: hidden;
+	border: 1px solid;
 }
 .listpbox{
 	width: 40px;
